<resources>
    <!--<string name="app_name">Reward</string>-->
    <string name="title_activity_login1">Sign in</string>


    <string name="FILENAME_LOGIN_DETAILS">com.rockers.reward.helper.file_login</string>
    <string name="KEY_USER_ID">user_id</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Login Screen -->
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="txt_continue">Continue</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="twitter">TWITTER</string>
    <string name="linkedin">LINKEDIN</string>

    <string name="sign_up">SIGN UP</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_validation_ok_action">OK</string>
    <string name="login_error_alert_title"></string>
    <string name="login_error_ok_action">OK</string>
    <string name="login_ok_action">OK</string>
    <string name="login_cancel_action">CANCEL</string>

    <string name="request_error">An error has occurred. Please try again later.</string>
   <!-- <string name="facebook_app_id">1095024393878441</string>-->
    <string name="facebook_app_id">293931454737605</string>
    <string name="fb_login_protocol_scheme">fb293931454737605</string>
    <string name="error_no_data_found">No record found</string>

    <!-- Actions -->

    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="title_activity_comment">Comments</string>
    <string name="title_activity_update">Updates</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_funder">Contributions</string>
    <string name="title_activity_follower">Followers</string>
    <string name="logout">Logout</string>
    <string name="title_activity_team_member">Team Members</string>
    <string name="title_activity_donation_detail">Donation</string>


    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_activity_action">TabActivityAction</string>
    <string name="title_activity_project_dashboard">ProjectDashboardActivity</string>
    <string name="title_activity_dashboard_perk">DashboardPerkActivity</string>
    <string name="title_activity_edit_user_profile">Edit Profile</string>

</resources>
