<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
    to prevent the dummy from receiving focus again -->
    <AutoCompleteTextView
        android:id="@+id/autotext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/autotext"
        android:nextFocusUp="@id/autotext" />


    <!--<include-->
        <!--android:id="@+id/tb_app_toolbar"-->
        <!--layout="@layout/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/negative_value_16"-->
        <!--android:layout_alignParentTop="true" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_app_toolbar"
        android:background="@drawable/bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_user_img_Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|center"
                android:layout_marginTop="@dimen/value_20">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/logo"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rl_user_img_Layout"
                android:layout_marginTop="@dimen/value_15"
                android:paddingLeft="@dimen/value_16"
                android:paddingRight="@dimen/value_16">

                <!-- Email -->
                <com.rock.reward.utils.CustomTextView
                    android:id="@+id/tv_email"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="@dimen/value_10"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/value_5"
                    android:paddingLeft="@dimen/value_10"
                    android:paddingRight="@dimen/value_10"
                    android:text="@string/email"
                    android:textSize="@dimen/size_normal_text"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <com.rock.reward.utils.CustomEditText
                    android:id="@+id/full_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_email"
                    android:paddingBottom="@dimen/value_10"
                    android:paddingRight="@dimen/value_10"
                    android:singleLine="true"
                    android:textSize="@dimen/size_normal_text"
                    android:theme="@style/Theme.App.Base"
                    android:textColor="@color/white"/>

                <!-- password -->
                <com.rock.reward.utils.CustomTextView
                    android:id="@+id/tv_password"
                    android:layout_width="fill_parent"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/value_10"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/full_name"
                    android:paddingLeft="@dimen/value_10"
                    android:paddingRight="@dimen/value_10"
                    android:text="@string/password"
                    android:textSize="@dimen/size_title_text"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <com.rock.reward.utils.CustomEditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_password"
                    android:paddingBottom="@dimen/value_10"
                    android:paddingRight="@dimen/value_10"
                    android:singleLine="true"
                    android:theme="@style/Theme.App.Base"
                    android:textSize="@dimen/size_title_text" />


                <com.rock.reward.utils.CustomButton
                    android:id="@+id/signup_button"
                    style="@style/button_login"
                    android:background="@drawable/round_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/value_15"
                    android:gravity="center"
                    android:paddingLeft="@dimen/value_50"
                    android:paddingRight="@dimen/value_50"
                    android:text="@string/login"
                    android:textSize="@dimen/size_title_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:id="@+id/tv_forgot_password"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/signup_button"
                    android:textColor="@color/white"/>

                <com.rock.reward.utils.CustomButton
                    android:id="@+id/btn_singin_facebook"
                    android:background="@drawable/round_social_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_below="@+id/tv_forgot_password"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/value_15"
                    android:gravity="center"
                    android:paddingLeft="@dimen/value_20"
                    android:paddingRight="@dimen/value_20"
                    android:text="@string/sign_in_with_facebook"
                    android:drawableLeft="@drawable/fb_icon"
                    android:textSize="@dimen/size_title_text" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ll_social"
                    android:paddingLeft="@dimen/value_20"
                    android:paddingRight="@dimen/value_20"
                    android:layout_below="@+id/btn_singin_facebook"
                    android:layout_centerHorizontal="true">

                    <com.rock.reward.utils.CustomButton
                        android:id="@+id/btn_singin_twitter"
                        android:background="@drawable/round_social_button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/twitter"
                        android:drawableLeft="@drawable/tw_icon"
                        android:textSize="@dimen/size_title_text"
                        android:layout_weight="0.5"
                        android:paddingLeft="20dp" />


                    <!--<com.rock.reward.utils.CustomButton
                        android:id="@+id/btn_linkedin"
                        android:background="@drawable/round_social_button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/linkedin"
                        android:drawableLeft="@drawable/ln_icon"
                        android:layout_weight="0.5"
                        android:paddingLeft="20dp"
                        android:textSize="@dimen/size_title_text" />-->

                </LinearLayout>

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitter_login_button"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/ll_social"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:id="@+id/info"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/ll_social"
                    android:textColor="@color/white"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

